styles.css
/* stylesheet for odin-flex-project future is future website */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
}


.header {
  display: flex;
  justify-content: space-around;
  background-color: #1F2937;
  min-width: 500px;
  padding: 18px;
}

ul {
  display: flex;
  list-style-type: none;
  gap: 15px;
}

.header-links {
  display: flex;
  align-items: center;
  
}

a {
  text-decoration: none;
  color: #E5E7EB;
  font-size: 18px;

}

.header-logo {
  font-size: 24px;
  font-weight: bolder;
  color: #F9FAf8;
}

.intro {  
  display: flex;
  padding: 100px;
  justify-content: space-around;
  background-color: #1F2937;
}

.intro-block {
  display: flex;
  flex-flow: column;
  padding: 20px;
  gap: 20px;
  align-items: flex-start;
  max-width: 33%;
}

.intro-header {
  color: #F9FAf8;
  font-size: 48px;
  font-weight: bolder;
}

.intro-content {
  color: #E5E7EB;
  font-size: 18px;
}

.button,
.button-2 {
  background-color: #3882F6;
  padding: 8px 16px;
  border-radius: 8px;
  border: 1px solid #3882F6;
  
}

.information {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 30px;
}

.card-container {
  display: flex;
  margin-top: 50px;
  gap: 30px;
  flex-flow: wrap;
  justify-content: space-between;
  align-items: center;
  height: 350px;
  flex: 1;
  margin-bottom: 100px;
}

.cards {
  border: 5px solid #3882F6;
  border-radius: 25px;
  width: 200px;
}

.card-box {
  display: flex;
  flex-flow: column wrap;
  width: 200px;
  
}

.card-text {
  color: #465263;
  font-weight: lighter;
  margin-top: 16px;
}

.info-title {
  color: #1F2937;
  font-weight: bolder;
  font-size: 36px;
}

.quote-container {
  display: flex;
  height: 350px;
  background-color: #E5E7EB;
  align-items: center;
  justify-content: center;
  flex-flow: column wrap;
}

.quote {
  font-size: 24px;
  font-style: italic;
  font-weight: lighter;
  color: #1F2937;
  text-align: center;
  width: 600px;
}

.quote-attribution {
  text-align: right;
  padding-left: 350px;
}

.button-section {
  display: flex;
  height: 350px;
  width: auto;
  align-items: center;
  justify-content: center; 
  padding: 100px;
}

.button-container {
  background-color: #3882F6;
  border-radius: 15px;
  padding: 50px 100px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 150px;
  width: 1000px;
}

.text-container {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: flex-start;
}

.call-to-action-title,
.call-to-action-action,
.button-2,
.button {
  color: #F9FAf8;
}

.button-2 {
  border: 1px solid #F9FAf8;
  padding: 8px 30px;
}

.call-to-action-title {
  font-weight: bolder;
}

.footer {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #1F2937;
  color: #F9FAf8;
  padding: 40px;
}

li {
  margin-left: 20px;
}

